--- a/src/global/variables.scss
+++ b/src/global/variables.scss
@@ -1,4 +1,5 @@
 
 // Media width breakpoints:
 $media-width-lg: 920px;
-$media-width-md: 740px;
+$media-width-md: 700px; // Previously: 740px
+$media-width-sm: 360px;
