--- a/src/gallery/module/module.scss
+++ b/src/gallery/module/module.scss
@@ -12,6 +12,12 @@
     grid-template-columns: repeat(6, 1fr);
     grid-auto-rows: 8rem; // Also consider decreasing this, especially as the number of images grows
     gap: clamp(0.5rem, 1vmax, 1rem);
+    @media (max-width: $media-width-md) {
+        margin: 1rem;
+    }
+    @media (max-width: $media-width-sm) {
+        margin: 0.5rem;
+    }
 }
 // NOTE: grid-auto-rows could be 20vh, but that is zoom invariant
 
@@ -42,7 +48,6 @@ body {
     background-image: url("./costelas.png");
     background-size: cover;
     background-position: center;
-    opacity: 0.6;
 }
 
 
