--- a/src/index/module/module.scss
+++ b/src/index/module/module.scss
@@ -53,6 +53,12 @@
     #intro .column-text > p + p {
         margin-top: 0.5rem;
     }
+    svg {
+        width: 0.9em;
+        height: 0.9em;
+        display: inline;
+        vertical-align: middle;
+    }
 }
 
 
