--- a/src/global/global_imports.scss
+++ b/src/global/global_imports.scss
@@ -1,6 +1,7 @@
 // Fonts:
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Color+Emoji&display=swap');
 
 // Palette:
 :root {
