--- a/cv/module.css
+++ b/cv/module.css
@@ -27,12 +27,15 @@
 #education dl dt {
   font-weight: bold;
 }
-#education dl dt:not(:first-child), #education dl dt:not(:first-child) + dd {
-  margin-top: 1rem;
+#education dl dt:not(:last-child), #education dl dd:not(:last-child) {
+  margin-bottom: 1rem;
+}
+#education dl dd > p:not(:last-child) {
+  margin-bottom: 0.5rem;
 }
 @media (max-width: 600px) {
-  #education dl div, #education dl div + dd, #education dl dt:not(:first-child) + dd {
-    margin-top: 0;
+  #education dl dt:not(:last-child) {
+    margin-bottom: 0;
   }
 }
 
@@ -49,8 +52,8 @@
 #experience .job {
   list-style-type: none;
 }
-#experience .job + .job {
-  margin-top: 1rem;
+#experience .job:not(:last-child) {
+  margin-bottom: 1rem;
 }
 #experience .job .j-title {
   margin-bottom: 0.5rem;
@@ -68,8 +71,8 @@
 #projects li, #awards li, #others li {
   margin-left: 1em;
 }
-#projects li + li, #awards li + li, #others li + li {
-  margin-top: 0.5rem;
+#projects li:not(:last-child), #awards li:not(:last-child), #others li:not(:last-child) {
+  margin-bottom: 0.5rem;
 }
 #projects .award, #awards .award, #others .award {
   margin-top: 0.25rem;
