--- a/gallery/module.css
+++ b/gallery/module.css
@@ -21,7 +21,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  background-image: url("./costelas.png");
+  background-image: url("./costelas.webp");
 }
 
 .gallery-item img {
