Major best practices update
- Injected removal of quarto post thumbnails
- Made first gallery images not lazy loaded
- Added head metadata (description, title, etc.); schema.org structured data; adjusted order of head tags
- Switched images to webp where possible
- Switched to `:not(:first-child)` & `margin-bottom` for spacing elements
- Switched to local fonts
- Added google verification

--- a/src/blog/module/module.scss
+++ b/src/blog/module/module.scss
@@ -54,9 +54,9 @@
     }
 
 
-    // No thumbnails, thus no wrapping:
+    // No thumbnails, thus no wrapping
     .quarto-listing .thumbnail {
-        display: none;
+        display: none; // This is getting removed from the HTML in inject_project()
     }
     .quarto-listing .quarto-post {
         flex-direction:row-reverse;
