--- a/src/gallery/module/module.scss
+++ b/src/gallery/module/module.scss
@@ -27,7 +27,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    background-image: url("./costelas.png");
+    background-image: url("./costelas.webp");
 }
 
 
