--- a/src/global/global_imports.scss
+++ b/src/global/global_imports.scss
@@ -1,7 +1,41 @@
 // Fonts:
-@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,700;1,400;1,700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Noto+Color+Emoji&display=swap');
+/* montserrat-regular - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/fonts/montserrat-v31-latin-regular.woff2') format('woff2'),
+       url('/assets/fonts/Montserrat-Medium.ttf') format('truetype');
+}
+/* montserrat-italic - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Montserrat';
+  font-style: italic;
+  font-weight: 400;
+  src: url('/assets/fonts/montserrat-v31-latin-italic.woff2') format('woff2'),
+       url('/assets/fonts/Montserrat-MediumItalic.ttf') format('truetype');
+}
+/* montserrat-700 - latin */
+@font-face {
+  font-display: swap;
+  font-family: 'Montserrat';
+  font-style: normal;
+  font-weight: 700;
+  src: url('/assets/fonts/montserrat-v31-latin-700.woff2') format('woff2'),
+       url('/assets/fonts/Montserrat-Bold.ttf') format('truetype');
+}
+/* noto-color-emoji-regular - emoji */
+@font-face {
+  font-display: fallback;
+  font-family: 'Noto Color Emoji';
+  font-style: normal;
+  font-weight: 400;
+  src: url('/assets/fonts/noto-color-emoji-v36-emoji-regular.woff2') format('woff2'),
+       url('/assets/fonts/NotoColorEmoji-Regular.ttf') format('truetype');
+}
+
 
 // Palette:
 :root {
