Follow-up best practices update
- More targeted inject_template()
- Created 404.html
- Grammar review of all pages
- Broken links adjustments
- Improved fonts with inline loading

--- a/src/blog/module/module.scss
+++ b/src/blog/module/module.scss
@@ -71,4 +71,15 @@
         font-size: 1.1rem;
         margin-top: 1rem;
     }
+
+
+    // Images:
+    .quarto-figure img {
+        width: 60%;
+    }
+    @media (max-width: $media-width-md) {
+        .quarto-figure img {
+            width: 90%;
+        }
+    }
 }
