--- a/src/gallery/module/module.scss
+++ b/src/gallery/module/module.scss
@@ -46,11 +46,11 @@ body {
 // Hole item:
 .gallery-hole {
     // Option one: add a background image to holes
-    //background-image: url("./costelas.png");
-    //background-size: cover;
-    //background-position: center;
+    background-image: url("./costelas.webp");
+    background-size: cover;
+    background-position: center;
     // Option two: just make holes transparent
-    opacity: 0;
+    //opacity: 0;
 }
 
 
