--- a/src/global/global_style.scss
+++ b/src/global/global_style.scss
@@ -29,7 +29,6 @@
         margin: 0;
         padding: 0;
         border:0;
-        outline:0;
         // box-sizing: border-box; // For a box model that includes padding and border in the width and height calculations
         line-height: 1.5; // Also consider other values
     }
@@ -83,6 +82,38 @@
 // - https://garden.bradwoods.io/notes/css/reset
 // - https://gist.github.com/Asjas/4b0736108d56197fce0ec9068145b421
 // - https://dbushell.com/2025/09/12/css-reset
+
+
+
+// Palette --------------------
+:root {
+    --gray: hsl(0, 0%, 95%);
+    --darkgray: hsl(0, 0%, 80%);
+    --lightgray: hsl(0, 0%, 97.5%);
+    --aquagray: hsl(0, 0%, 98.5%);
+    --blackgray: hsl(0, 0%, 40%);
+    --fontblack: hsl(210, 11%, 15%);
+    --red: hsl(350, 100%, 40%);
+    --darkred: hsl(350, 100%, 30%);
+    --lightred: hsl(350, 70%, 60%);
+    --aquared: hsl(350, 75%, 85%);
+    --orange: hsl(25, 100%, 40%);
+    --darkorange: hsl(25, 100%, 25%);
+    --lightorange: hsl(25, 70%, 60%);
+    --aquaorange: hsl(25, 80%, 85%);
+    --yellow: hsl(47, 100%, 45%);
+    --darkyellow: hsl(47, 100%, 30%);
+    --lightyellow: hsl(47, 90%, 70%);
+    --aquayellow: hsl(47, 85%, 85%);
+    --green: hsl(163, 100%, 25%);
+    --darkgreen: hsl(163, 100%, 15%);
+    --lightgreen: hsl(163, 70%, 45%);
+    --aquagreen: hsl(163, 75%, 80%);
+    --blue: hsl(185, 100%, 30%);
+    --darkblue: hsl(185, 100%, 15%);
+    --lightblue: hsl(185, 60%, 50%);
+    --aquablue: hsl(185, 75%, 80%);
+}
 
 
 
