--- a/src/global/global_style.scss
+++ b/src/global/global_style.scss
@@ -122,11 +122,11 @@
 // Fonts:
 body {
     font-weight: 400;
-    font-family: 'Nunito Sans', sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     color: var(--fontblack);
 }
 h1, h2, h3, h4, h5, h6 {
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat", sans-serif;
 }
 
 // Links:
